# seren

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  change_request.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml  smoke.yml
.runs/1f0c8b46-e3ba-4a69-b02b-c6cb80a6e28f/logs/: events.jsonl
.runs/6d659739-0786-4080-87ff-065145774197/logs/: events.jsonl
.runs/88b04faf-86c5-465d-97db-ebdfbfac29cd/logs/: events.jsonl
.runs/8d818798-dae6-46c3-af6d-e7b5c206e0f9/logs/: events.jsonl
.runs/94ade446-ed50-4b28-987b-761c177f6b67/logs/: events.jsonl
.runs/9baaf488-d399-4f2c-848c-7fc72f755983/logs/: events.jsonl
.runs/b1f61fc3-c257-4bd8-b7a6-0fcd9418cb74/logs/: events.jsonl
.runs/bb10bf1c-0e46-43e8-87f9-314c3d28ac5e/logs/: events.jsonl
.runs/dfb35d0c-256e-4c0f-804d-ccb29af8922e/logs/: events.jsonl
.runs/f2c1dd15-c438-48b1-b6b1-053031944529/logs/: events.jsonl
.runs/f8a914db-dd6e-4163-97da-33c3f2c940f7/logs/: events.jsonl
src/app/: __init__.py  cli.py  config.py  core.py  export_crewai.py  io.py  seren_planner.py  types.py  web.py
src/plugah_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/plugah_seren/: __init__.py
tests/: test_cli_quickstart.py  test_plugah_seren.py  test_smoke.py
