[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugah-orchestrator"
version = "0.1.0"
description = "AI agent orchestrator scaffold powered by Plugah (discovery → PRD → org plan → execution)."
requires-python = ">=3.11"
dependencies = [
  "plugah>=0.1.0",
  "pydantic>=2",
  "typer>=0.12",
  "rich>=13",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "mypy>=1.10", "ruff>=0.5"]

[project.scripts]
plugah-orchestrate = "app.cli:app"
plugah-web = "app.web:serve"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
